fix: Add Z-index for searchResults class

--- a/client/src/components/SearchResults/searchResults.scss
+++ b/client/src/components/SearchResults/searchResults.scss
@@ -12,6 +12,7 @@
   height: max-content;
   gap: 20px;
   overflow-y: auto;
+  z-index: 10;
 
   .no-results {
     text-align: center;
